# BiC-MPPI-GPU-

./: .gitignore  1.py  CMakeLists.txt  GEMINI.md  build_clustering.sh  build_cpu.sh  build_gpu.sh  fix_helpers.py  fix_svgd_mppi.py  generate_svgd_mppi_gpu.py  parking.txt  patch_svgd_rollouts.py  plot_manipulator.py  run_all.sh  run_all_epsilon.sh  run_clustering.sh  run_gpu_all.sh
build_cmake/: CMakeCache.txt
build_cpu/: mppi
build_gpu/: CMakeCache.txt  bi_mppi  bi_mppi_0.001  bi_mppi_0.005  bi_mppi_0.01  bi_mppi_0.05  bi_mppi_0.1  cluster_mppi  log_bi_mppi_0.001.txt  log_bi_mppi_0.005.txt  log_bi_mppi_0.01.txt  log_bi_mppi_0.05.txt  log_bi_mppi_0.1.txt  mppi  result_bi_mppi.csv  result_bi_mppi_clustering_0.001.csv  result_bi_mppi_clustering_0.005.csv  result_bi_mppi_clustering_0.01.csv  result_bi_mppi_clustering_0.05.csv  result_bi_mppi_clustering_0.1.csv  result_cluster_mppi.csv  result_mppi.csv  result_quadrotor_bi_mppi.csv  result_quadrotor_cluster_mppi.csv  result_quadrotor_mppi.csv  result_quadrotor_svgd_mppi.csv  result_svgd_mppi.csv  svgd_mppi  vis_bi_mppi  vis_cluster_mppi  vis_mppi  vis_svgd_mppi
build_gpu_bin/: bi_mppi  cluster_mppi  mppi  svgd_mppi
build_run/: CMakeCache.txt  Makefile  bi_mppi  bicycle_rrt_connect  cluster_mppi  cmake_install.cmake  log_mppi  mppi  quadrotor_rrt_connect  svgd_mppi  wmrobot_rrt_connect  x_init_log.csv
manipulator_result/: x_init_bi_mppi_log.csv  x_init_cluster_log.csv  x_init_log_mppi_log.csv  x_init_mppi_log.csv
model/: bicycle.h  manipulator.h  manipulator_7dof.h  model_base.h  quadrotor.h  velo.h  wmrobot_map.h
mppi/: bi_mppi.h  bi_mppi_Lie_group.h  cluster_mppi.h  cluster_mppi_3D.h  collision_checker.h  log_mppi_3D.h  mppi.h  mppi_3D.h  mppi_param.h  mppi_vis_logger.h  svgd_mppi.h  svgd_mppi_3D.h
mppi/cuda/: bi_mppi_gpu.cu  bi_mppi_gpu.cuh  mppi_gpu.cu  (+7 more)
mppi/cuda copy/: bi_mppi_gpu.cu  bi_mppi_gpu.cuh  cluster_mppi_gpu.cu  cluster_mppi_gpu.cuh  cuda_utils.cuh  mppi_gpu.cu  mppi_gpu.cuh  svgd_mppi_gpu.cu  svgd_mppi_gpu.cuh
obstacles/: cylinder_test.txt
scratch/: generate_dummy_traj.py  test_curand  test_curand.cu
(+122 files in other folders)
